--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 #create .env file and put all keys on it and replace the values of key with real values
 
 PORT = 3000
-DB_URL = 'you db url'
-JWT_KEY 
+DB_URL = 'your db url'
+JWT_KEY  = 
